popup overflow related bug fix

--- a/nxdev/notificationx/scss/nx_new/_alerts.scss
+++ b/nxdev/notificationx/scss/nx_new/_alerts.scss
@@ -33,6 +33,9 @@
         }
     }
 }
+.swal2-html-container {
+    overflow: visible !important;
+}
 .swal-shortcode-wrapper {
     label {
         display: block;
